--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ License URI:
 		font: 13px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #777;
 		margin: 0;
-		width: 210px;
+		width: 40%; /* 210px */
 		max-width: 100%;
 		display: block;
 		margin-bottom: 20px;
@@ -934,7 +934,24 @@ ul.sub-menu .current_page_item a {
 ================================================== */	
 /* 09 - Comments
 ================================================== */	
+
+#respond {
+    background: none repeat scroll 0 0 transparent;
+    border: medium none;
+    clear: both;
+    color: inherit;
+    float: none;
+    font-family: Arial,Helvetica,Tahoma,Verdana,sans-serif;
+    font-weight: normal;
+    margin: 0 0 15px;
+    overflow: hidden;
+    padding: 15px 0;
+    width: auto;
+}
 /* Comment Form */
+h3 #reply-title {
+	font-size: 1.4em;
+}
 	
 #commentform {
 	position: relative;
