--- a/style.css
+++ b/style.css
@@ -316,6 +316,9 @@ License URI:
 	#header {
 		margin: 0;
 }
+	#footer-wrapper {
+		margin: 0 auto;
+}
 	#content-info {
   		margin-top: 45px;
   		padding: 35px 0 36px;
@@ -964,7 +967,7 @@ License URI:
 
 /* 11 - Footer
 ================================================== */
-	#footer-wrapper {
+	#widgets-footer {
 			margin:0 auto;
 			padding:0;
 }
@@ -993,7 +996,6 @@ License URI:
 	.center {
 		text-align:center;
 }
-
 /*	Clearfix */
 
 	.clearfix:after, #container:after {
