--- a/style.css
+++ b/style.css
@@ -316,15 +316,12 @@ License URI:
 	#header {
 		margin: 0;
 }
-	#footer-wrapper {
-		margin: 0 auto;
-}
-	#content-info {
-  		margin-top: 45px;
+	#footer {
+  		margin: 45px auto 0 auto;
   		padding: 35px 0 36px;
   		border-top: 1px solid #e5e5e5;
 }
-	#content-info p small { font-size: 13px; }
+	#footer p small { font-size: 13px; }
 
 /* 04 - Margins & Paddings
 ================================================== */
@@ -967,9 +964,10 @@ License URI:
 
 /* 11 - Footer
 ================================================== */
-	#widgets-footer {
-			margin:0 auto;
+	#widgets-footer,
+	#copyright {
 			padding:0;
+			position: relative;
 }
 	.copyright { text-align:left; }
 	.scroll-top { text-align:center; }
