validated css partially

--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -236,7 +236,8 @@
     float: left;
   }
   #container,
-  #wrapper {
+  #wrapper,
+  #footer {
     width: 724px;
   }
   .span12 {
@@ -358,7 +359,8 @@
     float: left;
   }
   #container,
-  #wrapper {
+  #wrapper,
+  #footer {
     width: 1170px;
     padding: 0;
   }
