--- a/style.css
+++ b/style.css
@@ -317,7 +317,8 @@ License URI:
 		margin: 0;
 }
 	#footer {
-  		margin: 45px auto 0 auto;
+  		width: 960px;
+  		margin: 45px auto;
   		padding: 35px 0 36px;
   		border-top: 1px solid #e5e5e5;
 }
@@ -612,7 +613,7 @@ License URI:
 }
 /*	Post	*/
 	.hentry header { }
-	.hentry h2 a { text-decoration: none; }
+	.hentry h1 a { text-decoration: none; }
 	.hentry time { display: block; }
 	.hentry p.byline { }
 	.hentry footer { clear: both; }
