--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -7,7 +7,6 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  *
- * with modifications by Daniel
  */
  
 .row {
@@ -15,17 +14,9 @@
 	margin-bottom:2.083%;
 	padding-top:0;
 }
-.span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11 {
+.span3, .span4, .span6, .span8 {
 	display:inline;
 	margin-right:2.083%;
-}
-
-.span1 {
-	width:6.38297%;
-}
-
-.span2 {
-	width:14.89361%;
 }
 
 .span3 {
@@ -36,32 +27,12 @@
 	width:31.91489%;
 }
 
-.span5 {
-	width:40.42553%;
-}
-
 .span6 {
 	width:48.82978%;
 }
 
-.span7 {
-	width:57.4468%;
-}
-
 .span8 {
 	width:65.95744%;
-}
-
-.span9 {
-	width:74.46808%;
-}
-
-.span10 {
-	width:82.97872%;
-}
-
-.span11 {
-	width:91.48936%;
 }
 
 .span12 {
@@ -94,36 +65,7 @@
 /* Media Queries
 ==================================================*/
 
-@media (max-width: 767px) {
-  .visible-phone {
-    display: inherit !important;
-  }
-  .hidden-phone {
-    display: none !important;
-  }
-  .hidden-desktop {
-    display: inherit !important;
-  }
-  .visible-desktop {
-    display: none !important;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 979px) {
-  .visible-tablet {
-    display: inherit !important;
-  }
-  .hidden-tablet {
-    display: none !important;
-  }
-  .hidden-desktop {
-    display: inherit !important;
-  }
-  .visible-desktop {
-    display: none !important ;
-  }
-}
-
+/* Landscape phones and down */
 @media (max-width: 480px) {
   .nav-collapse {
     -webkit-transform: translate3d(0, 0, 0);
@@ -172,6 +114,8 @@
   }
 }
 
+
+/* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
   body {
     padding-right: 20px;
@@ -218,8 +162,21 @@
     display: inline-block;
     width: auto;
   }
+    .visible-phone {
+    display: inherit !important;
+  }
+  .hidden-phone {
+    display: none !important;
+  }
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important;
+  }
 }
 
+/* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
   .row {
     *zoom: 1;
@@ -236,113 +193,39 @@
     float: left;
   }
   #container,
-  #wrapper,
   #footer {
     width: 724px;
   }
   .span12 {
-    width: 724px;
-  }
-  .span11 {
-    width: 662px;
-  }
-  .span10 {
-    width: 600px;
-  }
-  .span9 {
-    width: 538px;
+    width: 99.9468085036383%;
   }
   .span8 {
-    width: 476px;
-  }
-  .span7 {
-    width: 414px;
+    width: 65.6926648596383%;
   }
   .span6 {
-    width: 352px;
-  }
-  .span5 {
-    width: 290px;
+    width: 48.5655930376383%;
   }
   .span4 {
-    width: 228px;
+    width: 31.4385212156383%;
   }
   .span3 {
-    width: 166px;
+    width: 22.874985304638297%;
   }
-  .span2 {
-    width: 104px;
+  .visible-tablet {
+    display: inherit !important;
   }
-  .span1 {
-    width: 42px;
+  .hidden-tablet {
+    display: none !important;
   }
-  input,
-  textarea,
-  .uneditable-input {
-    margin-left: 0;
+  .hidden-desktop {
+    display: inherit !important;
   }
-  input.span12,
-  textarea.span12,
-  .uneditable-input.span12 {
-    width: 714px;
-  }
-  input.span11,
-  textarea.span11,
-  .uneditable-input.span11 {
-    width: 652px;
-  }
-  input.span10,
-  textarea.span10,
-  .uneditable-input.span10 {
-    width: 590px;
-  }
-  input.span9,
-  textarea.span9,
-  .uneditable-input.span9 {
-    width: 528px;
-  }
-  input.span8,
-  textarea.span8,
-  .uneditable-input.span8 {
-    width: 466px;
-  }
-  input.span7,
-  textarea.span7,
-  .uneditable-input.span7 {
-    width: 404px;
-  }
-  input.span6,
-  textarea.span6,
-  .uneditable-input.span6 {
-    width: 342px;
-  }
-  input.span5,
-  textarea.span5,
-  .uneditable-input.span5 {
-    width: 280px;
-  }
-  input.span4,
-  textarea.span4,
-  .uneditable-input.span4 {
-    width: 218px;
-  }
-  input.span3,
-  textarea.span3,
-  .uneditable-input.span3 {
-    width: 156px;
-  }
-  input.span2,
-  textarea.span2,
-  .uneditable-input.span2 {
-    width: 94px;
-  }
-  input.span1,
-  textarea.span1,
-  .uneditable-input.span1 {
-    width: 32px;
+  .visible-desktop {
+    display: none !important ;
   }
 }
 
+/* Large desktop */
 @media (min-width: 1200px) {
   .row {
     *zoom: 1;
@@ -359,120 +242,23 @@
     float: left;
   }
   #container,
-  #wrapper,
   #footer {
     width: 1170px;
     padding: 0;
   }
   .span12 {
-    width: 1170px;
-  }
-  .span11 {
-    width: 1070px;
-  }
-  .span10 {
-    width: 970px;
-  }
-  .span9 {
-    width: 870px;
+    width: 99.9468085036383%;
   }
   .span8 {
-    width: 770px;
-  }
-  .span7 {
-    width: 670px;
+    width: 65.6926648596383%;
   }
   .span6 {
-    width: 570px;
-  }
-  .span5 {
-    width: 470px;
+    width: 48.5655930376383%;
   }
   .span4 {
-    width: 370px;
+    width: 31.4385212156383%;
   }
   .span3 {
-    width: 270px;
+    width: 22.874985304638297%;
   }
-  .span2 {
-    width: 170px;
-  }
-  .span1 {
-    width: 70px;
-  }
-  input,
-  textarea,
-  .uneditable-input {
-    margin-left: 0;
-  }
-  input.span12,
-  textarea.span12,
-  .uneditable-input.span12 {
-    width: 1160px;
-  }
-  input.span11,
-  textarea.span11,
-  .uneditable-input.span11 {
-    width: 1060px;
-  }
-  input.span10,
-  textarea.span10,
-  .uneditable-input.span10 {
-    width: 960px;
-  }
-  input.span9,
-  textarea.span9,
-  .uneditable-input.span9 {
-    width: 860px;
-  }
-  input.span8,
-  textarea.span8,
-  .uneditable-input.span8 {
-    width: 760px;
-  }
-  input.span7,
-  textarea.span7,
-  .uneditable-input.span7 {
-    width: 660px;
-  }
-  input.span6,
-  textarea.span6,
-  .uneditable-input.span6 {
-    width: 560px;
-  }
-  input.span5,
-  textarea.span5,
-  .uneditable-input.span5 {
-    width: 460px;
-  }
-  input.span4,
-  textarea.span4,
-  .uneditable-input.span4 {
-    width: 360px;
-  }
-  input.span3,
-  textarea.span3,
-  .uneditable-input.span3 {
-    width: 260px;
-  }
-  input.span2,
-  textarea.span2,
-  .uneditable-input.span2 {
-    width: 160px;
-  }
-  input.span1,
-  textarea.span1,
-  .uneditable-input.span1 {
-    width: 60px;
-  }
-}
-
-@media (max-width: 979px) {
-  body {
-    padding-top: 0;
-  }
-}
-
-@media (min-width: 980px) {
-  
 }
