--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ License URI:
 		color: #377687; 
 		display:block;
 		font-size:13px;
-/*		font-weight:700;*/
+		font-weight:600;
 		height:45px;
 		line-height:45px;
 		margin:0;
@@ -819,7 +819,7 @@ License URI:
 		line-height:23px;
 		margin:0;
 		padding:20px 20px 0 20px;
-		/*text-align:center;*/
+		text-align:center;
 }
 	.widget-title a {
 		border-bottom:none;
@@ -972,9 +972,8 @@ License URI:
 			padding:10px;
 			position: relative;
 }
-	.copyright { text-align:left; }
-	.scroll-top { text-align:center; }
-	.powered { text-align:right; }
+	.copyright { text-align:left; line-height: 1; }
+	.scroll-top { text-align:right; }
 
 /* 12 - Misc
 ================================================== */
