--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -103,7 +103,7 @@ License URI:
 }	
 	h2 {
 		color: #8ca1a1;
-		/*font-size:1.6em;
+		font-size:1.6em;
 }
 	h3 {
 		font-size:1.5em;
@@ -112,7 +112,7 @@ License URI:
 		font-size:1.3em;
 }
 	h5 {
-		font-size:1.2em;*/
+		font-size:1.2em;
 }
 	h6 {
 		font-size:1em;
