--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -95,27 +95,24 @@ License URI:
 }
 	h1 { 
 		color: #593e37;
-		font-size: 2em;
+/*		font-size: 2em;*/
 }
-	h1,
-	h1 a {
-		line-height: 1.5em;
-}	
 	h2 {
 		color: #8ca1a1;
-		font-size:1.6em;
+/*		font-size:1.6em;*/
 }
 	h3 {
-		font-size:1.5em;
+/*		font-size:1.5em;*/
+		line-height:1.2;
 }
 	h4 {
-		font-size:1.3em;
+/*		font-size:1.3em;*/
 }
 	h5 {
-		font-size:1.2em;
+/*		font-size:1.2em;*/
 }
 	h6 {
-		font-size:1em;
+/*		font-size:1em;*/
 		text-transform:uppercase;
 }
 	p { margin: 0 0 20px 0; }
@@ -431,6 +428,7 @@ License URI:
 	#header #logo {
 		float:left;
 		margin-left:10%;
+		margin-bottom: 20px;
 }
 	#header #logo .site-name {
 		display:block;
@@ -674,7 +672,7 @@ License URI:
 	#thumbnail div div {
 		background-color: #a68076;
 		overflow: hidden;
-		width: 306px; 
+		width: 300px !important;
 		min-height: 175px;
 		height: auto !important;
 		display:inline-block;
@@ -695,14 +693,14 @@ License URI:
 	#thumbnail li img {
 		border: none;
 		opacity: 1;
-		width: 306px; 
+		width: 300px; 
 		height: 175px;
 		display: block;
 }
 	#thumbnail .row .title-overlay {
 		text-align: center;
 		position: absolute;
-		width: 306px;
+		width: 300px;
 		margin-top: 80px;
 		opacity: 0;
 }
@@ -735,7 +733,7 @@ License URI:
 		background-image: url(images/home_banner.jpg);
 		background-repeat: no-repeat;
 		background-position: center top;
-		background-color: #000;
+		background-color: #377687;
 		height: 380px;
 		display: block;
 		text-align: center;
@@ -813,12 +811,12 @@ License URI:
 	.widget-inner h3 {  
 		color: #377687;
 		display:block;
-		font-size:24px;
-		font-weight:700;
+/*		font-size:24px;
+		font-weight:700;*/
 		line-height:23px;
 		margin:0;
-		padding:20px 20px 0 20px;
-		text-align:center;
+		padding:20px 20px 0 0;
+/*		text-align:center;*/
 }
 	.widget-title a {
 		border-bottom:none;
@@ -942,15 +940,15 @@ License URI:
 	.pager a {
 		  display: inline-block;
 		  padding: 5px 14px;
-		  background-color: #fff;
+/*		  background-color: #fff;
 		  border: 1px solid #ddd;
 		  -webkit-border-radius: 15px;
 		     -moz-border-radius: 15px;
-			  border-radius: 15px;
+			  border-radius: 15px;*/
 }
 	.pager a:hover {
 		  text-decoration: none;
-		  background-color: #f5f5f5;
+/*		  background-color: #f5f5f5;*/
 }
 	.pager .next a {
 	  	float: right;
