--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -758,6 +758,7 @@ License URI:
 }
 	.featured-subtitle {
 		text-align:center;
+		font-size:1.6em;
 }
 
 /* 07 - Sidebar
@@ -815,7 +816,7 @@ License URI:
 		font-weight:700;*/
 		line-height:23px;
 		margin:0;
-		padding:20px 20px 0 0;
+		padding:20px 20px 0 20px;
 /*		text-align:center;*/
 }
 	.widget-title a {
