--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -100,16 +100,12 @@ License URI:
 	h2 {
 		color: #8ca1a1;
 }
-	h3 { }
-	h4 { }
-	h5 { }
 	h6 {
 		text-transform:uppercase;
 }
 	p { margin: 0 0 20px 0; }
 	p img { margin: 0; }
 	p.lead { font-size: 21px; line-height: 27px; color: #777;  }
-
 	em { font-style: italic; }
 	strong { font-weight: bold; color: #333; }
 	small { font-size: 80%; }
@@ -320,101 +316,80 @@ License URI:
 }
 	#footer p small { font-size: 13px; }
 
+
 /* 04 - Margins & Paddings
 ================================================== */
 	blockquote:first-child {
 		margin:.8em 0;
 }
-
 	p, ul, ol, dl, pre, blockquote, address, table, form {
 		margin-bottom:1.6em;
 }
-
 	h1 {
 		margin:1em 0 .5em;
 }
-
 	h2 {
 		margin:1.07em 0 .535em;
 }
-
 	h3 {
 		margin:1.14em 0 .57em;
 }
-
 	h4 {
 		margin:1.23em 0 .615em;
 }
-
 	h5 {
 		margin:1.33em 0 .67em;
 }
-
 	h6 {
 		margin:1.6em 0 .8em;
 }
-
 	th, td {
 		padding:.8em;
 }
-
 	caption {
 		padding-bottom:.8em;
 }
-
 	blockquote {
 		margin:1.6em 0;
 		padding:0 1em;
 }
-
 	fieldset {
 		margin:1.6em 0;
 		padding:0 1em 1em;
 }
-
 	legend {
 		padding-left:.8em;
 		padding-right:.8em;
 }
-
 	legend+* {
 		margin-top:1em;
 }
-
 	textarea, input {
 		padding:.3em .4em .15em;
 }
-
 	select {
 		padding:.1em .2em 0;
 }
-
 	option {
 		padding:0 .4em;
 }
-
 	a {
 		padding:.3em 0 .1em;
 		position:relative;
 }
-
 	dt {
 		margin-bottom:.4em;
 		margin-top:.8em;
 }
-
 	ul {
 		margin-left:1.5em;
 }
-
 	ol {
 		margin-left:2.35em;
 }
-
 	ol ol, ul ol {
 		margin-left:2.5em;
 }
-
 	form div {
 		margin-bottom:.8em;
 }
@@ -507,7 +482,6 @@ License URI:
 	.main-nav, .main-nav ul {
 		min-height:0;
 }
-/*	Page Menu	*/
 	.main-nav ul {
 		left:0;
 		position:absolute;
@@ -619,11 +593,9 @@ License URI:
 	.hentry time { display: block; }
 	.hentry p.byline { }
 	.hentry footer { clear: both; }
-
 	.comments-link {
 		font-size:12px;
 }
-
 	#cancel-comment-reply-link {
 		color:#900;
 }
@@ -634,6 +606,8 @@ License URI:
 }
 	.post-entry {
 		clear:both;
+		margin-top: 30px;
+		margin-bottom: 50px;
 }
 	.post-meta {
 		clear:both;
@@ -753,7 +727,7 @@ License URI:
 		letter-spacing: -1px;
 		line-height: 1;
 		margin: 0;
-		padding-left: 20%;
+		padding-left: 15%;
 		text-shadow: 0 0 1px #3F544E;
 		position: fixed;
 		top: 380px;
