--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -423,16 +423,16 @@ License URI:
 		color: #8CA1A1;
 }
 /* Primary Navigation */
-	.main-nav {
+	.menu {
 		clear:both;
 		margin:0 20px;
 }
-	.main-nav, .main-nav ul {
+	.menu, .menu ul {
 		display:block;
 		list-style-type:none;
 		padding:0;
 }
-	.main-nav li {
+	.menu li {
 		border:0;
 		display:block;
 		float:left;
@@ -441,17 +441,17 @@ License URI:
 		position:relative;
 		z-index:5;
 }
-	.main-nav li:hover {
+	.menu li:hover {
 		white-space:normal;
 		z-index:10000;
 }
-	.main-nav a {
+	.menu a {
 		font-family: "Droid Serif","Georgia",serif;
 		border-left:1px solid #DEDCC3; 
 		color: #377687; 
 		display:block;
 		font-size:13px;
-		font-weight:600;
+		font-weight:700;
 		height:45px;
 		line-height:45px;
 		margin:0;
@@ -459,60 +459,62 @@ License URI:
 		position:relative;
 		text-decoration:none;
 }
-	.main-nav a:hover {
+	.menu a:hover {
 	    	background-image: url(images/menu-bg.png);
 		text-decoration:none;
 		color: #377687;
 }
-	.main-nav .current_page_item a,
-	.main-nav .current-menu-item a {
+	.menu .current_page_item a,
+	.menu .current-menu-item a {
 		background-image: url(images/menu-bg.png);
 }
-	.main-nav li li {
+/* Style Primary Navigation Specific to viewport width */
+@media (min-width: 481px) {
+	.menu li li {
 		float:none;
-}
-	.main-nav:after, .main-nav ul:after {
+	}
+	.menu:after, .menu ul:after {
 		clear:both;
 		content:".";
-		display:block;
+		display: block;
 		height:0;
 		overflow:hidden;
 		visibility:hidden;
-}
-	.main-nav, .main-nav ul {
+	}
+	.menu, .menu ul {
 		min-height:0;
-}
-	.main-nav ul {
+	}
+	.menu ul {
 		left:0;
 		position:absolute;
 		top:0;
 		visibility:hidden;
 		z-index:10;
-}
-	.main-nav li:hover > ul {
+	}
+	.menu li:hover > ul {
 		top:100%;
 		visibility:visible;
-}
-	.main-nav li li:hover > ul {
+	}
+	.menu li li:hover > ul {
 		left:100%;
 		top:0;
-}
-	.main-nav ul {
+	}
+	.menu ul {
 		margin:-10px 0 0 -30px;
 		padding:10px 30px 30px;
-}
-	.main-nav ul ul {
+	}
+	.menu ul ul {
 		margin:-30px 0 0 -10px;
 		padding:30px 30px 30px 10px;
-}
-	.main-nav ul li a:hover {
+	}
+	.menu ul li a:hover {
 		background-image: url(images/menu-bg.png);
-}
-	.main-nav ul {
+	}
+	.menu ul {
 		min-width:12em;
 		width:auto;
-}
-	.main-nav li li {
+	}
+	.menu li li {
 		background:#fff;
 		background-image:none;
 		border:1px solid #b2b2b2;
@@ -520,8 +522,8 @@ License URI:
 		color:#444;
 		filter:none;
 		width:auto;
-}
-	.main-nav li li a {
+	}
+	.menu li li a {
 		border:none;
 		color:#444;
 		font-size:12px;
@@ -532,33 +534,34 @@ License URI:
 		padding:5px 10px;
 		text-shadow:none;
 		white-space:nowrap;
-}
-	.main-nav li li a:hover {
+	}
+	.menu li li a:hover {
 		background:#f5f5f5;
 		background-image:none;
 		border:none;
 		color:#444;
 		filter:none;
-}
-	.main-nav ul > li + li {
+	}
+	.menu ul > li + li {
 		border-top:0;
-}
-	.main-nav li li:hover > ul {
+	}
+	.menu li li:hover > ul {
 		left:100%;
 		top:0;
-}
-	.main-nav > li:first-child > a {
+	}
+	.menu > li:first-child > a {
 		border-left:none;
-}
-	.main-nav > li:first-child > a, .menu-container li + li + li li:first-child > a {
-}
-	.main-nav ul.children a, .main-nav .current_page_ancestor, .main-nav .current_page_ancestor ul a {
+	}
+	.menu > li:first-child > a, .menu-container li + li + li li:first-child > a {
+	}
+	.menu ul.children a, .menu .current_page_ancestor, .menu .current_page_ancestor ul a {
 		background:none;
 		background-image:none;
 		filter:none;
-}
+	}
 	ul.sub-menu .current_page_item a {
 		background:transparent !important;
+	}
 }
 
 /* 06 - Content
@@ -609,22 +612,22 @@ License URI:
 		margin-top: 30px;
 		margin-bottom: 50px;
 }
-	.post-meta {
+	.post-meta,
+	.logged-in-as,
+	.pagination {
 		clear:both;
 		color:#9f9f9f;
 		font-size:13px;
 		margin-bottom:10px;
 }
-	.post-edit {
+	.post-edit,
+	.read-more {
 		clear:both;
 		display:block;
 		font-size:12px;
 		margin:1.5em 0;
 }
 	.post-search-terms {
-		clear:both;
-}
-	.read-more {
 		clear:both;
 }
 	.attachment-entry {
@@ -850,6 +853,12 @@ License URI:
 		clear: both; 
 		display: block; 
 }
+	.comment-body {
+		clear:both;
+		color:#9f9f9f;
+		font-size:13px;
+		margin-bottom:10px;
+}
 	.commentlist .avatar { 
 		margin-right: 10px;
 		float: left;
@@ -941,8 +950,8 @@ License URI:
 /* 11 - Footer
 ================================================== */
 	#copyright {
-			padding:10px;
-			position: relative;
+		padding:10px;
+		position: relative;
 }
 	.copyright { 
 		text-align:left; 
