fix some minor inconsistencies throughout the theme

--- a/pilotfish/style.css
+++ b/pilotfish/style.css
@@ -1,12 +1,12 @@
 /* 
 Theme Name: Pilot Fish 
-Theme URI: http://
+Theme URI: http://wordpress.danielatwork.com/
 Description: minimal, full width, portfolio, responsive design with one custom post type and parallax scrolling
 
 Author: Daniel Zhao
 Author URI: http://danielatwork.com/
-Version: 0.2 
-Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, flexible-width, full-width-template, theme-options
+Version: 0.2.2 
+Tags: white, blue, gray, light, custom-menu, custom-header, custom-background, one-column, flexible-width, full-width-template
 	
 License: 
 License URI:	
